--- a/HHA507_Assignment2.ipynb
+++ b/HHA507_Assignment2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNKl6TOP7QynvskDIOArCjP",
+      "authorship_tag": "ABX9TyMiN8ce3Vfu5ipkfBdNZbXl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "id": "jr-Pu6owsL3y"
       },
@@ -64,7 +64,7 @@
         "id": "qiZUL1arswEU",
         "outputId": "54314587-24ff-4b7c-ba9f-5e8f114f1b31"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -693,7 +693,7 @@
         "id": "ia7jA_Uwvl7w",
         "outputId": "ff2b2e8d-5ec5-42bb-e7c0-cadc910ccccc"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -740,7 +740,7 @@
         "id": "ONGTBo6w3eAI",
         "outputId": "615bca29-3cd4-4bdf-ac7f-07a669a09c0a"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1372,7 +1372,7 @@
         "id": "2mbYdBglftw2",
         "outputId": "00e610a7-56d0-4aa2-8baa-ef7c18de8019"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1401,7 +1401,7 @@
         },
         "outputId": "4692c93d-e4f0-4069-a0eb-b8da3a6a7d63"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2020,7 +2020,7 @@
       "metadata": {
         "id": "WCyRVZxJXtni"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2036,7 +2036,7 @@
         "id": "NvuVWqdRrJtk",
         "outputId": "57dec0c0-3b8f-4523-bed8-51c6b6b20747"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2654,7 +2654,7 @@
         "id": "Q_tz9e7Z4MYr",
         "outputId": "2ee58bef-68e2-4915-ef05-6c25e43dbafa"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2701,7 +2701,7 @@
         "id": "gnKg0uVrsreC",
         "outputId": "ce7a991d-8a53-4bdf-d6de-bee4137f5931"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2732,7 +2732,7 @@
         "id": "Wjc2zhSvirDG",
         "outputId": "289ba1e5-e23c-4333-9324-ebc5f411d9ad"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3373,7 +3373,7 @@
         "id": "UQ7NI7sanjsd",
         "outputId": "0b2525be-c003-4da2-f065-7caa0fd818e1"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4006,7 +4006,7 @@
         "id": "P9QrpsVlr9kx",
         "outputId": "d8933238-6382-4452-ab9d-5e9f7652e6db"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4892,7 +4892,7 @@
         "id": "Gvv195kGDI7p",
         "outputId": "d1e394e9-b692-4244-df26-add502c3926c"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4937,7 +4937,7 @@
         "id": "LHt5Nd6jHwAu",
         "outputId": "5be4cca3-683d-4cfa-fdfb-e45d3d143bac"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -4979,7 +4979,7 @@
       "metadata": {
         "id": "8yjidUsZ-W98"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4996,7 +4996,7 @@
         "id": "FMdSDeKNvlsJ",
         "outputId": "52db46fd-f830-4913-c12a-521a18e4f971"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5047,12 +5047,13 @@
     {
       "cell_type": "code",
       "source": [
+        "import polars as pl\n",
         "import time"
       ],
       "metadata": {
         "id": "s0fDfqZw5VMH"
       },
-      "execution_count": 65,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -5063,7 +5064,7 @@
       "metadata": {
         "id": "5OQRW4nN6njc"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5081,27 +5082,10 @@
         "pandas_time = time.time() - start_time"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 252
-        },
-        "id": "VeyXu7BtNDW-",
-        "outputId": "004e0fe3-7b17-4d26-e3c7-0a856dec4542"
+        "id": "VeyXu7BtNDW-"
       },
-      "execution_count": 74,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-74-8c5bb10f52a7>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Polars\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mstart_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mpolar_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mpolars_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mstart_time\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'read_csv'"
-          ]
-        }
-      ]
+      "execution_count": 77,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -5113,23 +5097,19 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 234
+          "base_uri": "https://localhost:8080/"
         },
         "id": "goQv80AGQ1hj",
-        "outputId": "fd70d15a-1adc-436e-9a20-757b50f6713f"
+        "outputId": "824f96ad-c3cc-4095-de8c-3e1d5e82d7e7"
       },
-      "execution_count": 75,
+      "execution_count": 78,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-75-8f55f34b8d8d>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Print execution times\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"polars Execution Time: {polars_time:.4f} seconds\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Pandas Execution Time: {pandas_time:.4f} seconds\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'polars_time' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "polars Execution Time: 0.2914 seconds\n",
+            "Pandas Execution Time: 0.5689 seconds\n"
           ]
         }
       ]
@@ -5139,7 +5119,7 @@
       "source": [
         "### Observations:\n",
         "\n",
-        "Expect: Polars to load faster than Pandas"
+        "Polars to load faster than Pandas"
       ],
       "metadata": {
         "id": "RTU6_X0ZR9HF"
